--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,19 @@
 {% extends "layout.html" %}
 {% block heading %}
-  <h1>Note-E:- </h1>
 {% endblock %}
 
 {% block body %}
+  <h1>My Notes</h1>
+
   <ul>
-    <li><a href="{{ url_for('index') }}">Take a note.</a></li>
-    <li><a href="{{ url_for('index') }}">Make a Todo list.</a></li>
+    {% for note in notes %}
+      <li>{{ note }}</li>
+    {% endfor %}
   </ul>
+
+  <form action="{{ url_for('index') }}" method="post">
+    <input type="text" name="notes" placeholder="Enter your note here.." autofocus="on">
+    <button>Add Note</button>
+  </form>
+
 {% endblock %}
